# DB-Streamdash

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: database.py
