[tool.poetry]
name = "db-streamdash"
version = "0.1.0"
description = "Projeto de Banco de dados do StreamDash"
authors = ["Gabriel Ronchi Brigido <gabrielbrigido1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
taskipy = "^1.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[tool.taskipy.tasks]
db-up = "docker-compose up -d"
git-config = "pre-commit install && pre-commit install --hook-type commit-msg"
pre-commit = "git add . && git commit -m aaa"
commit = "git add . && cz commit"
branch = "git checkout -b" # Inserir nome da Branch nova
push = "git push origin" # Inserir nome da Branch

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
